# test_ble

./: .gitignore  README.md
boards/Fizix/deneme_board_nrf52840/: Kconfig.defconfig  Kconfig.deneme_board_nrf52840  board.yml  deneme_board_nrf52840-pinctrl.dtsi  deneme_board_nrf52840.dts  deneme_board_nrf52840.yml  deneme_board_nrf52840_defconfig
central_smp_client/: Kconfig  prj.conf
gateway/: CMakeLists.txt  Kconfig  overlay-phy_coded.conf  prj.conf  prj_minimal.conf
gateway/boards/: deneme_board_nrf52840.overlay  nrf52840dk_nrf52840.overlay
gateway/include/: zephyr.h
gateway/src/: main.c
node/: CMakeLists.txt  Kconfig  overlay-extended.conf  overlay-phy_coded.conf  prj.conf  prj_minimal.conf
node/boards/: deneme_board_nrf52840.overlay  deneme_board_nrf52840_pinctrl.dtsi  nrf52840dk_nrf52840_pinctrl.dtsi
node/include/: zephyr.h
node/src/: main.c
olight/: CMakeLists.txt  overlay-pm.conf
olight/boards/: nrf52840dk_nrf52840_pinctrl.dtsi
olight/drivers/: pdm.c  pwm.c
olight/include/: common.h  pdm.h  pwm.h
olight/src/: main.c
smp_svr/: CMakeLists.txt  overlay-lilfs.conf  overlay-pdm.conf
smp_svr/boards/: nrf52840dk_nrf52840.overlay
smp_svr/drivers/: bluetooth.c  file.c
smp_svr/include/: bluetooth.h  common.h  file.h  littlefs_sample.h  zephyr.h
smp_svr/src/: bluetooth.c  littlefs_sample.c  main.c
